Scrollable plugins not registered properly in ScrollingCoordinator https://bugs.webkit.org/show_bug.cgi?id=82163

Reviewed by Anders Carlsson.

Source/WebCore:

Plugins may be scrollable, so we have to add them in the non-fast scrollable region. Tested manually.

* page/scrolling/ScrollingCoordinator.cpp:
(WebCore::computeNonFastScrollableRegion):
(WebCore::ScrollingCoordinator::nonFastScrollableRegion):
(WebCore):
* page/scrolling/ScrollingCoordinator.h:
(ScrollingCoordinator):
* plugins/PluginViewBase.h:
(WebCore::PluginViewBase::scrollable):
(PluginViewBase):

Source/WebKit/chromium:

* src/WebPluginContainerImpl.cpp:
(WebKit::WebPluginContainerImpl::scrollable):
* src/WebPluginContainerImpl.h:
(WebPluginContainerImpl):

Canonical link: https://commits.webkit.org/99579@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@112142 268f45cc-cd09-0410-ab3c-d52691b4dbfc